<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:textSize="21sp"
        android:textColor="#000000"
        android:fontFamily="@font/nanum_barun_gothic_bold"
        android:text="@string/main_modify" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <EditText
        android:id="@+id/dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanum_barun_gothic"
        android:singleLine="true"
        android:hint="@string/dialog_titlehint" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanum_barun_gothic"
        android:singleLine="true"
        android:hint="@string/dialog_texthint" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <LinearLayout
        android:id="@+id/color_choose_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp"
        android:foreground="?selectableItemBackground" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/nanum_barun_gothic"
            android:text="@string/dialog_color" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <View
            android:id="@+id/color_preview_add"
            android:layout_width="45sp"
            android:layout_height="20sp" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|end">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:minWidth="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:text="@string/dialog_cancel"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:minWidth="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:text="@string/main_modify"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>
