<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:text="@string/set_noti" />

        <LinearLayout
            android:id="@+id/settings_color_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="16dp"
            android:foreground="?selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:fontFamily="@font/nanum_barun_gothic"
                android:text="@string/set_noticolor" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <View
                android:id="@+id/settings_color_preview"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/shape_circle"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorBorder" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/nanum_barun_gothic_bold"
            android:text="@string/qa" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="16dp" >
            <Switch
                android:id="@+id/settings_switch_qa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:fontFamily="@font/nanum_barun_gothic"
                android:text="@string/set_enableqa" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorBorder" />

        <LinearLayout
            android:id="@+id/settings_qa_color_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="16dp"
            android:foreground="?selectableItemBackground">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:fontFamily="@font/nanum_barun_gothic"
                android:text="@string/set_qacolor" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <View
                android:id="@+id/settings_qa_color_preview"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/shape_circle"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorBorder" />

    </LinearLayout>

</ScrollView>
